--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env: 
+      working-directory: ./client-app
 
     strategy:
       matrix:
@@ -26,5 +28,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      working-directory: ${{ env.working-directory}}
     - run: npm run build --if-present
+      working-directory: ${{ env.working-directory}}
     - run: npm test
+      working-directory: ${{ env.working-directory}}
