--- a/client-app/package.json
+++ b/client-app/package.json
@@ -2,7 +2,6 @@
   "name": "client-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://awebbdev.github.io/reactivites",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -16,6 +15,7 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0"
   }
 }
